--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ Thumbs.db
 ehthumbs.db
 
 # Folder config file
+images/Final for Website/*
 Desktop.ini
 
 # Recycle Bin used on file shares
@@ -26,7 +27,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
